--- a/.github/workflows/convert.yml
+++ b/.github/workflows/convert.yml
@@ -39,7 +39,7 @@ jobs:
       run: |
         git config --local user.email "github-actions[bot]@users.noreply.github.com"
         git config --local user.name "github-actions[bot]"
-        git add SAP/
+        git add SAP_Materials/
         git commit -m "🤖 Auto-convert: Evernote to Markdown [$(date +'%Y-%m-%d %H:%M:%S')]"
         git push
     
